[package]
name = "rcz"
version = "0.4.10"
edition = "2021"
authors = ["Cassin01"]
license = "MIT OR Apache-2.0"
description = "A tool to write a commit message"
readme = "README.md"
homepage = "https://github.com/Cassin01/rcz"
repository = "https://github.com/Cassin01/rcz"
keywords = ["cli", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = {version="0.10.2", features = ["fuzzy-select"]}
confy = "0.5.0"
serde_derive = "1.0.144"
serde = { version = "1.0", features = ["derive"] }
